--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -5,13 +5,6 @@
 /*****      MAIN                             ******/
 /**************************************************/
 
-.center {
-    height: 100vh;
-    height: calc(var(--vh, 1vh) * 100);
-    display: grid;
-    place-items: center;
-}
-
 .center .login-container {
     width: 100%;
     height: 70%;
@@ -49,10 +42,11 @@
 
 .center .login-container .login-logo-bg .logo-name {
     font-weight: 700;
+    color: var(--app-dark-text-color);
 }
 
 .center .login-container .login-view {
-    background-color: #f5fcff;
+    background-color: var(--app-light-bg);
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     display: grid;
