--- a/src/stylesheet/base.css
+++ b/src/stylesheet/base.css
@@ -62,5 +62,5 @@ body:not(.index) {
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
     display: grid;
-    padding: 40px 0px;
+    margin: 40px 0px;
 }
