--- a/src/stylesheet/home.css
+++ b/src/stylesheet/home.css
@@ -47,6 +47,7 @@ header .login-logo-bg .logo-name {
     display: grid;
     place-items: center;
     margin-top: 12px;
+    border-radius: 50%;
 }
 
 .avatar .dropbtn {
@@ -119,11 +120,11 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: var(--app-purple);
+    color: var(--app-light-blue);
 }
 
 /**************************************************/
-/*****   MAIN CONTAINER                      ******/
+/*****          MAIN CONTAINER               ******/
 /**************************************************/
 
 .row {
@@ -136,32 +137,31 @@ nav ul li a:hover {
 .row .card {
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
+    /* flex-grow: 1; */
     border-radius: 5px;
     background-color: #f8f8f8;
     box-shadow: 0 20px 48px 0 rgba(146, 153, 197, 0.15);
-    padding: 20px;
 }
 
 /* flex columns with screen width 800px and up */
 @media (min-width: 901px) {
     .row .card.profile, .card.users {
-        width: 20%
+        width: 25%
     }
     
     .row .card.timeline {
-        width: 40%
+        width: 48%
     }
 }
 
 /* flex columns with screen width 801px and down */
 @media (max-width: 900px) {
     .row .card.profile, .card.users {
-        width: 20%
+        width: 25%
     }
     
     .row .card.timeline {
-        width: 40%
+        width: 48%
     }
 }
 
@@ -172,3 +172,115 @@ nav ul li a:hover {
     }
 }
 
+/**************************************************/
+/*****           PROFILE                     ******/
+/**************************************************/
+
+.row .card.profile .profile-info, .premium-info {
+    padding: 20px;
+}
+
+.row .card.profile .views-connections {
+    margin: 20px 0px;
+}
+
+.row .card.profile .profile-info {
+    text-align: center;
+    display: grid;
+    place-items: center;
+}
+
+.row .card.profile .profile-info .img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    background: #fff url("../images/me.jpeg") center center / cover no-repeat;
+    margin: 20px 0px;
+}
+
+.row .card.profile .profile-info .title h2 {
+    font-size: 20px;
+    color: var(--app-dark-text-color);
+}
+
+.row .card.profile .profile-info .title p {
+    font-size: 14px;
+    color: var(--app-medium-grey);
+}
+
+.row .card.profile .profile-info .title {
+    margin-bottom: 20px;
+}
+
+.row .card.profile .profile-info .linkedin {
+    display: flex;
+    align-items: center;
+    width: 85%;
+}
+
+.row .card.profile .profile-info .linkedin i {
+    font-size: 14px;
+    color: var(--app-light-blue);
+}
+
+.row .card.profile .profile-info .linkedin a {
+    font-size: 14px;
+    color: var(--app-medium-grey);
+    transition: color 0.4s ease-in-out;
+    text-decoration: none;
+}
+
+.row .card.profile .profile-info .linkedin a:hover {
+    color: var(--app-light-blue);
+}
+
+.row .card.profile .views-connections > div {
+    width: 50%;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    text-align: center;
+}
+
+.row .card.profile .views-connections div:first-child {
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.row .card.profile .views-connections .count {
+    font-size: 20px;
+    font-weight: 700;
+    color: var(--app-dark-text-color);
+}
+
+.row .card.profile .views-connections p {
+    color: var(--app-medium-grey);
+}
+
+.row .card.profile .premium-info {
+    text-align: center;
+}
+
+.row .card.profile .premium-info p {
+    font-size: 14px;
+    color: var(--app-medium-grey);
+}
+
+.row .card.profile .premium-info button {
+    height: 40px;
+    text-align: center;
+    border-radius: 50px;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: 0.2px;
+    transition: all 0.4s ease-in-out;
+    background-color: var(--app-light-grey);
+    color: var(--app-purple);
+    text-transform: uppercase;
+    padding: 0 20px;
+    margin-top: 10px;
+}
+
+.row .card.profile .premium-info button:hover {
+    background-color: var(--app-purple-hover);
+    color: var(--app-light-text-color);
+}
