--- a/src/stylesheet/home.css
+++ b/src/stylesheet/home.css
@@ -3,12 +3,6 @@
 /*****      HEADER                           ******/
 /**************************************************/
 
-header {
-    line-height: var(--app-header-line-height);
-    height: 70px;
-    background-color: #f8f8f8;
-}
-
 header .flexbox {
     justify-content: space-between;
 }
@@ -132,6 +126,7 @@ header .login-logo-bg .logo-name {
     flex-flow: row wrap;
     gap: 10px;
     width: 100%;
+    min-width: 500px;
 }
 
 .row .card {
@@ -139,25 +134,31 @@ header .login-logo-bg .logo-name {
     flex-direction: column;
     flex-grow: 1;
     border-radius: 5px;
-    background-color: #f8f8f8;
-    box-shadow: 0 20px 48px 0 rgba(146, 153, 197, 0.15);
 }
 
 /* flex columns with screen width 800px and up */
 @media only screen and (min-width: 923px) { 
     .row .card.profile, .card.users {
-        width: 20%
+        box-shadow: 0 20px 48px 0 rgba(146, 153, 197, 0.15);
+        width: 20%;
+        background-color: #f8f8f8;
     }
     
     .row .card.timeline {
-        width: 50%
+        width: 50%;
     }
 }
 
 /* flex columns with screen width 480px and down */
 @media only screen and (max-width: 922px) {
-    .row .card.profile, .card.users, .row .card.timeline {
-        width: 100%
+    .row .card.profile, .card.users {
+        width: 100%;
+        background-color: #f8f8f8;
+        box-shadow: 0 20px 48px 0 rgba(146, 153, 197, 0.15);
+    }
+    
+    .row .card.timeline {
+        width: 100%;
     }
 } */
 
@@ -256,7 +257,7 @@ header .login-logo-bg .logo-name {
 .row .card.profile .premium-info button {
     height: 40px;
     text-align: center;
-    border-radius: 50px;
+    border-radius: 4px;
     font-size: 13px;
     font-weight: 600;
     letter-spacing: 0.2px;
@@ -271,6 +272,165 @@ header .login-logo-bg .logo-name {
 .row .card.profile .premium-info button:hover {
     background-color: var(--app-purple-hover);
     color: var(--app-light-text-color);
+}
+
+
+/**************************************************/
+/*****           TIMELINE                    ******/
+/**************************************************/
+
+.timeline-post {
+    padding: 20px;
+    width: 100%;
+    background-color: #f8f8f8;
+    border-radius: 5px;
+    box-shadow: 0 20px 48px 0 rgba(146, 153, 197, 0.15);
+}
+
+.timeline-post .form textarea {
+    width: 100%;
+    height: 80px;
+    border: none;
+    background: none;
+    font-size: 17px;
+    font-weight: 400;
+    text-align: left;
+    color: var(--app-dark-text-color);
+    resize: none;
+}
+
+.timeline-post .form .flexbox {
+    margin-top: 15px;
+}
+
+.timeline-post .form .flexbox {
+    justify-content: space-between;
+    align-items: center;
+}
+
+.file-name-selected {
+    width: 80%;
+    height: 40px;
+    text-align: left;
+    color: var(--app-medium-grey);
+    font-size: 14px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+#fileInput{
+    display: none;
+}
+
+.file-icon{
+    cursor: pointer;
+    color: var(--app-dark-text-color);
+    font-size: 30px;
+}
+
+.timeline-post .form .flexbox button {
+    height: 40px;
+    text-align: center;
+    border-radius: 4px;
+    font-size: 13px;
+    font-weight: 600;
+    letter-spacing: 0.2px;
+    transition: all 0.4s ease-in-out;
+    background-color: var(--app-light-grey);
+    color: var(--app-purple);
+    text-transform: uppercase;
+    padding: 0 20px;
+    margin-top: 10px;
+}
+
+.timeline-post .form .flexbox button:hover {
+    background-color: var(--app-purple-hover);
+    color: var(--app-light-text-color);
+}
+
+.grid {
+    display: grid;
+    width: 100%;
+    grid-template-columns: 1fr;
+    gap: 10px;
+}
+
+.grid > div.card {
+    color: var(--app-dark-text-color);
+    box-shadow: 0 20px 48px 0 rgba(146, 153, 197, 0.15);
+    background-color: #f8f8f8;
+    border-radius: 5px;
+    animation: appearUp 0.4s ease-in;
+    transition: border 0.25s ease-in-out;
+    padding: 15px;
+}
+
+.grid > div.card .post-header {
+    line-height: 30px;
+    margin-bottom: 10px;
+}
+
+.grid > div.card .post-header .post-profile-pic {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.grid > div.card .post-header .post-profile-pic img {
+    width: 30px;
+    height: 30px;
+}
+
+.grid > div.card .post-header .profile-name {
+    width: 73%;
+    color: var(--app-dark-text-color);
+    font-size: 15px;
+    font-weight: 600;
+    text-align: left;
+    margin-left: 5px;
+}
+
+.grid > div.card .post-header .post-date {
+    color: rgba(28, 28, 28, 0.6);
+    font-size: 15px;
+    width: 20%;
+    margin-left: 5px;
+}
+
+.grid > div.card .post-header p {
+    color: var(--app-dark-text-color);
+    font-size: 15px;
+    font-weight: 400;
+}
+
+.grid > div.card .post-body > * {
+    margin-bottom: 10px;
+}
+
+.grid > div.card .post-body .post-body-img {
+    width: 100%;
+    display: grid;
+    place-items: center;
+}
+
+.message {
+    width: 100%;
+    height: 40px;
+    display: grid;
+    align-items: center;
+    text-align: center;
+}
+
+.message p {
+    opacity: 0;
+    font-size: 14px;
+    animation: disappear 5s ease-in-out;
+}
+
+.message p.invalid {
+    color: var(--app-purple);
 }
 
 /**************************************************/
@@ -306,12 +466,28 @@ header .login-logo-bg .logo-name {
         width: 50px;
         height: 50px;
     }
+
+    .row .card.users .users .user-cards .user-card .details .name {
+        font-size: 14px;
+    }
+
+    .row .card.users .users .user-cards .user-card .details .city {
+        font-size: 13px;
+    }
 }
 
 @media only screen and (max-width: 922px) {
     .row .card.users .users .user-cards .user-card .img {
         width: 70px;
         height: 70px;
+    }
+
+    .row .card.users .users .user-cards .user-card .details .name {
+        font-size: 17px;
+    }
+
+    .row .card.users .users .user-cards .user-card .details .city {
+        font-size: 15px;
     }
 }
 
@@ -320,13 +496,11 @@ header .login-logo-bg .logo-name {
 }
 
 .row .card.users .users .user-cards .user-card .details .name {
-    font-size: 16px;
-    font-weight: 700;
     color: var(--app-dark-text-color);
+    font-weight: 700;
 }
 
 .row .card.users .users .user-cards .user-card .details .city {
-    font-size: 13px;
     font-weight: 400;
     color: var(--app-medium-grey);
 }
@@ -350,7 +524,47 @@ header .login-logo-bg .logo-name {
 /*****           FOOTER                      ******/
 /**************************************************/
 
+@media only screen and (min-width: 923px) { 
+    footer article p, .copyright p {
+        font-size: 17px;
+    }
+}
+
+@media only screen and (max-width: 922px) {
+    footer article p, .copyright p {
+        font-size: 13px;
+    }
+}
+
 footer .copyright p {
     font-weight: 600;
     color: var(--app-purple);
+}
+
+footer p {
+    line-height: 30px;
+}
+
+/**************************************************/
+/*****       Animations                      ******/
+/**************************************************/
+
+@keyframes appearUp {
+    from {
+        opacity: 0;
+        transform: translate(0px, 10px);
+    }
+    to {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+@keyframes disappear {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
 }
