--- a/src/stylesheet/base.css
+++ b/src/stylesheet/base.css
@@ -41,6 +41,7 @@ body.index {
 body:not(.index) {
     /* background-color: #f1f1f1; */
     background-color: rgba(115, 153, 213, 0.09);
+    /* background-image: linear-gradient(to right,#9dcdf3 , #fff); */
 }
 
 .container {
