--- a/src/stylesheet/base.css
+++ b/src/stylesheet/base.css
@@ -68,7 +68,12 @@ header {
 }
 
 .home-center {
-    margin: 40px 0px;
+    /* height: calc(var(--vh, 1vh) * 100); */
+    height: 100vh;
+    /* height: calc(var(--vh, 1vh) * 100); */
+    display: grid;
+    place-items: center;
+    margin: 20px 0px;
 }
 
 footer {
