--- a/src/stylesheet/home.css
+++ b/src/stylesheet/home.css
@@ -38,7 +38,7 @@ header .login-logo-bg .logo-name {
     height: 45px;
     border-radius: 50%;
     overflow: hidden;
-    margin-top: 10px;
+    margin: 12px 0px;
 }
 
 .avatar .logout {
