--- a/src/stylesheet/index.css
+++ b/src/stylesheet/index.css
@@ -7,7 +7,7 @@
 
 .center .login-container {
     width: 100%;
-    height: 70%;
+    height: 600px;
     box-shadow: rgba(0, 0, 0, 0.03) 0px 26px 30px 10px, rgba(0, 0, 0, 0.03) 0px 16px 10px 10px;
     border-radius: 20px;
 }
